--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.holder {
+	width: 200px;
+    height: 200px;
+	display: flex;
+	grid-template-columns: repeat(2, 100px);
+    grid-template-rows: repeat(2, 100px);
+	grid-auto-flow: row;
+}
+.item {
+    border: 1px solid black; 
+}
