--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 .holder {
 	width: 200px;
     height: 200px;
-	display: flex;
+	display: grid;
 	grid-template-columns: repeat(2, 100px);
     grid-template-rows: repeat(2, 100px);
 	grid-auto-flow: row;
